# monthly-business-survey-results

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  calibration_group_map.csv  config.json  config_user.json  conftest.py  export_main.py  get_test_outputs.py  growth_rate_main.py  main.py  old_new_structure.md  pyproject.toml  qa_output_482.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  spp_output_testing.py  test_outputs_config.json  testing_helpers.py  testing_main.py  valueError_validate_manual_constructions.csv
.github/: CODEOWNERS  pull_request_template.md
docs/: conf.py  old_new_structure.md
mbs_results/: README.md  SPP_missing_data.py  __init__.py  aggregate_aweight.py  aggregate_aweights_by_class.py  aggregate_weights_by_domain.py  apply_estimation.py  apply_imputation_link.py  calculate_estimation_weights.py  calculate_imputation_link.py  calculate_predicted_unit_value.py  calculate_ratio_estimation.py  calculate_winsorised_weight.py  config.json  config_constants.json  config_dev.json  config_user.json  constants.json  constrains.py  construction_matches.py  create_missing_questions.py  csw_to_spp_converter.py  cumulative_imputation_links.py  data_cleaning.py  estimation.py  export_main.py  final_outputs.py  flag_and_count_matched_pairs.py  flag_for_winsorisation.py  growth_rate_main.py  growth_rate_output.py  imputation_flags.py  logging_config.py  main.py  merge_domain.py  overwrite_l_values.py  period_zero_se_wrapper.py  pivot_imputation_value.py  pre_processing_estimation.py  pre_processing_imputation.py  (+16 more)
playground/: imputation.py  read_snapshot.py
pre-commits/: check_added_large_files.py  check_merge_conflict.py  commit_msg.py  end_of_line_fixer.py  mixed_line_endings.py  prepare_commit_msg.py  remove_whitespace.py
selective_editing_review_doc/: config_user.json
src/: apply_imputation_link.py  calculate_imputation_link.py  construction_link.py  construction_matches.py  cumulative_imputation_links.py  estimation.py  flag_and_count_matched_pairs.py  flag_for_winsorisation.py  forward_link.py  imputation_flags.py  link_filter.py  multiply_imputation_links.py  predictive_variable.py  ratio_of_means.py  read_in_data.py
test_files/: hello_world.py  join-concepts.ipynb  test.py
tests/: 01_C_input.csv  README.md  Untitled.py  apply_imputation_link.csv  calculate_links_test_data.csv  calculate_predicted_value_data.csv  case1_data.csv  case1_expected_output.csv  case2_data.csv  case2_expected_output.csv  case3_data.csv  case3_expected_output.csv  case_1.csv  construction_matches.csv  cumulative_links.csv  helper_functions.py  imputation_flag_data.csv  imputation_flag_data_manual_construction.csv  merge_domain.csv  predictive_variable.csv  test_aggregate_aweights.py  test_aggregate_aweights_by_class.py  test_aggregate_weights_by_domain.py  test_apply_imputation_link.py  test_calculate_predicted_unit_value.py  test_calculate_ratio_estimation.py  test_calculate_winsorised_weight.py  test_constrains.py  test_construction_matched_pairs.py  test_construction_matches.py  test_correct_values.csv  test_create_imputation_class.csv  test_create_missing_questions.py  test_create_selective_editing_question.py  test_create_standardising_factor.py  (+23 more)
(+604 files in other folders)
