[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

# `bandit' configurations
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = []

# `isort` configurations
[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
]
