[metadata]
name = monthly-business-survey-results
description = Public Sector local Python downloads and preprocessing package
url = https://github.com/ONSdigital/monthly-business-survey-results
version = 0.1.11
author = Office for National Statistics
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    mbs_results
    mbs_results.configs
    mbs_results.estimation
    mbs_results.imputation
    mbs_results.outlier_detection
    mbs_results.outputs
    mbs_results.staging
    mbs_results.utilities
include_package_data = True
install_requires =
    pyyaml
    pandas
    numpy
    rdsa-utils
    raz-client
    boto3
    tomli
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where = mbs_results

[options.extras_require]
dev =
    coverage
    detect-secrets==1.0.3
    myst-parser
    pre-commit
    pytest==7.0.1
    Sphinx
    toml

[options.entry_points]
console_scripts =
    setup_mbs= mbs_results.utilities.copy_script_and_config:copy_script_and_config
    run_mbs_main = mbs_results.main:run_mbs_main
    run_se_period_zero = mbs_results.outputs.period_zero_se_wrapper:period_zero_se_wrapper
    run_final_output = mbs_results.final_outputs:run_final_outputs
